apps/backend/base/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-backend
  namespace: store-backend
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway # Кто стучится
    namespace: envoy-gateway-system # Из какого неймспейса
  to:
  - group: "" 
    kind: Service # К чему даем доступ
